<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/content_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp"
            android:paddingHorizontal="20dp"
            android:textSize="20dp"
            android:text="@string/decision_02"/>

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:src="@drawable/ai"/>

        <Button
            android:id="@+id/decision_default_04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/decision_02D"
            android:onClick="go_decision_02D"/>

        <Button
            android:id="@+id/decision_default_03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/decision_02C"
            android:onClick="go_decision_02C"/>

        <Button
            android:id="@+id/decision_default_02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/decision_02B"
            android:onClick="go_decision_02B"/>

        <Button
            android:id="@+id/decision_default_01"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/decision_02A"
            android:onClick="go_decision_02A"/>


    </LinearLayout>
</ScrollView>