<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/content_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp"
            android:paddingHorizontal="20dp"
            android:textSize="20dp"
            android:text="@string/decision_04"/>

        <Button
            android:id="@+id/decision_default_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/decision_04A"
            android:onClick="go_decision_04A"/>

        <Button
            android:id="@+id/decision_default_02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/decision_04B"
            android:onClick="go_decision_04B"/>
    </LinearLayout>
</ScrollView>